--- a/example/package.json
+++ b/example/package.json
@@ -7,8 +7,7 @@
   "author": "sohobloo <sohobloo@live.cn> (https://github.com/sohobloo)",
   "dependencies": {
     "react": "^15.4.1",
-    "react-native": "^0.42.3",
-    "react-native-modal-dropdown": "latest"
+    "react-native": "^0.42.3"
   },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start"
