feat: 更改 package.json 信息

--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
     "selector",
     "option"
   ],
-  "homepage": "https://github.com/sohobloo/react-native-modal-dropdown",
+  "homepage": "https://github.com/phonechan/react-native-modal-dropdown",
   "bugs": {
     "url": "https://github.com/sohobloo/react-native-modal-dropdown/issues",
     "email": "sohobloo@live.cn"
   },
   "license": "MIT",
-  "author": "sohobloo <sohobloo@live.cn> (https://github.com/sohobloo)",
+  "author": "phonechan <phonechan@foxmail.com> (https://github.com/phonechan)",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sohobloo/react-native-modal-dropdown.git"
+    "url": "https://github.com/phonechan/react-native-modal-dropdown.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
